# snakes_on_a_plane

./: .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  soap.toml
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: docs_env.yml  full_env.yml  pip_env.yml  test_env.yml  user_env.yml
docs/: Makefile  README.md  api.rst  cli.md  conf.py  configuring.md  getting_started.rst  index.md  index.rst  make.bat
docs/_templates/autosummary/: module.rst
snakes_on_a_plane/: __init__.py
soap/: __init__.py  _cli.py  _models.py  _soap.py  _version.py  conda.py  config.py  exceptions.py  soap.py  utils.py
soap/_cli/: __init__.py
soap/cli/: __init__.py
soap/tests/: test_config.py  test_snakes_on_a_plane.py
soap/tests/data/: maximalist.toml
